# docker-mit-nix-talk

./: .gitignore  README.org  flake.nix  shell.nix
go_backend/: Dockerfile  default.nix  go.mod  server.go
haskell_backend/: Dockerfile  Dockerfile.better  default.nix  haskell-backend.cabal
haskell_backend/src-exe/: Main.hs
nix/: both-backends-one-image.nix  docker-release.nix  go-docker-image.nix  haskell-docker-image.nix  python-client-docker-image.nix
presentation/: .gitignore  Makefile  bauanleitung.nix  export.el  flake.nix  presentation.org
presentation/css/: fonts.css  syntax.css
presentation/css/themes/: active.css
presentation/css/themes/source/: active.scss
python_client/: Dockerfile  default.nix  pyproject.toml
python_client/python_client/: __init__.py
python_client/tests/: test_python_client.py
scripts/: run_naive_docker_setup.sh  run_nix_release_setup.sh  run_nix_setup_separate_services.sh
